--- a/sections/dyanamic-advanced-grid.liquid
+++ b/sections/dyanamic-advanced-grid.liquid
@@ -12,11 +12,11 @@
   <!-- Welcome section ends -->
   {% schema %}
   {
-  "name": "Section name",
+  "name": "Grid Advanced",
   "settings": [],
   "presets": [
   {
-  "name": "Welcome section Test",
+  "name": "Advanced Grid",
   "category": "ADVANCED LAYOUT"
   }
   ]
