--- a/sections/dyanamic-advanced-grid.liquid
+++ b/sections/dyanamic-advanced-grid.liquid
@@ -1,28 +1,44 @@
 <!-- Welcome section starts -->
 <section class="welcome">
-  <div class="container">
-  <div class="welcome-outter">
-  <h2 class="section-heading">Heading 1</h2>
-  <h1 class="section-large-heading">Heading 2</h1>
-  <p class="discription">Lorem ipsum is placeholder text commonly used...</p>
-  </div>
-  <div class="col-xs-12 col-md-12 text-center"><button class="view-btn"><a href="">read more</a></button></div>
-  </div>
-  </section>
-  <!-- Welcome section ends -->
-  {% schema %}
-  {
-  "name": "Grid Advanced",
-  "settings": [],
-  "presets": [
-  {
-  "name": "Advanced Grid",
-  "category": "ADVANCED LAYOUT"
-  }
-  ]
-  }
-  {% endschema %}
-  {% stylesheet %}
-  {% endstylesheet %}
-  {% javascript %}
-  {% endjavascript %}
+	<div class="container">
+		<div class="welcome-outter">
+			<h2 class="section-heading">Heading 1</h2>
+			<h1 class="section-large-heading">Heading 2</h1>
+			<p class="discription">
+				Lorem ipsum is placeholder text commonly used...
+			</p>
+		</div>
+		<div class="col-xs-12 col-md-12 text-center">
+			<button class="view-btn"><a href="">read more</a></button>
+		</div>
+	</div>
+</section>
+
+<!-- Welcome section ends -->
+{% schema %}
+	{
+		"name": "Grid Advanced",
+		"class": "",
+		"settings": [
+			{
+				"type": "text",
+				"id": "title",
+				"label": "Heading",
+				"default": "Collection list"
+			},
+		],
+		"presets": [
+			{
+				"name": "Advanced Grid",
+			}
+		]
+	}
+{% endschema %}
+
+<!-- STYLE -->
+{% stylesheet %}
+{% endstylesheet %}
+
+<!-- JAVASCRIPT -->
+{% javascript %}
+{% endjavascript %}
