--- a/sections/dyanamic-advanced-grid.liquid
+++ b/sections/dyanamic-advanced-grid.liquid
@@ -2,15 +2,11 @@
 <section class="welcome">
 	<div class="container">
 		<div class="welcome-outter">
-			<h2 class="section-heading">Heading 1</h2>
-			<h1 class="section-large-heading">Heading 2</h1>
-			<p class="discription">
-				Lorem ipsum is placeholder text commonly used...
-			</p>
-		</div>
-		<div class="col-xs-12 col-md-12 text-center">
-			<button class="view-btn"><a href="">read more</a></button>
-		</div>
+			{% if section.settings.title != blank %}
+				<h2 class="home-section--title">
+					{{ section.settings.title | escape }}
+				</h2>
+			{% endif %}
 	</div>
 </section>
 
