--- a/sections/dyanamic-advanced-grid.liquid
+++ b/sections/dyanamic-advanced-grid.liquid
@@ -2,7 +2,7 @@
 <section class="welcome">
 	<div class="container">
 		<div class="welcome-outter">
-			{% if section.settings.title != blank %}
+			{% if section.settings.title != blank and section.settings.showTitle %}
 				<h2 class="home-section--title">
 					{{ section.settings.title | escape }}
 				</h2>
@@ -17,10 +17,16 @@
 	"name": "Grid Advanced",
 	"settings": [
 		{
+			"type": "checkbox",
+			"id": "showTitle",
+			"label": "Show Title",
+			"default": false
+		},
+		{
 			"type": "text",
 			"id": "title",
 			"label": "Heading",
-			"default": "Collection list"
+			"default": ""
 		}
 	],
 	"presets": [
