--- a/sections/dyanamic-advanced-grid.liquid
+++ b/sections/dyanamic-advanced-grid.liquid
@@ -18,7 +18,7 @@
 		<div class="row">
 			{%- for collection in collections -%}
 			  <div class="col-12 col-md-6 col-lg-4">
-				<a href="{{ collection.url }}">
+				<a href="{{ collection.url }}" class="home-section--title">
 				  {{ collection.title }}
 				</a>
 			  </div>
