--- a/sections/dyanamic-all-collections-list.liquid
+++ b/sections/dyanamic-all-collections-list.liquid
@@ -10,6 +10,7 @@
 			<h2 class="home-section--title">
 				All Collections
 			</h2>
+			<h6>{{ collections.length }}</h6>
 		{% endif %}
 	</div>
 
