--- a/sections/dyanamic-all-collections-list.liquid
+++ b/sections/dyanamic-all-collections-list.liquid
@@ -9,7 +9,7 @@
 		{% if section.settings.showTitle %}
 			<h2 class="home-section--title">
 				All Collections
-			</h2>
+			</h2 style="text-align: center;">
 			<h6>{{ collections.length }}</h6>
 		{% endif %}
 	</div>
