Way to go genius.. -_-

--- a/sections/dyanamic-all-collections-list.liquid
+++ b/sections/dyanamic-all-collections-list.liquid
@@ -9,8 +9,8 @@
 		{% if section.settings.showTitle %}
 			<h2 class="home-section--title">
 				All Collections
-			</h2 style="text-align: center;">
-			<h6>{{ collections.length }}</h6>
+			</h2>
+			<h6 style="text-align: center;">{{ collections.length }}</h6>
 		{% endif %}
 	</div>
 
