--- a/sections/dyanamic-advanced-grid.liquid
+++ b/sections/dyanamic-advanced-grid.liquid
@@ -15,11 +15,11 @@
 			</div>
 		{% endif %}
 
-		<div class="col-12 col-md-6 col-lg-4">
+		<div class="col-12 col-md-6">
 			content here
 		</div>
 
-		<div class="col-12 col-md-6 col-lg-4">
+		<div class="col-12 col-md-6">
 			content here
 		</div>
 	</div>
