Putting header settings back, added display none to theme.css

--- a/assets/theme.css
+++ b/assets/theme.css
@@ -20602,3 +20602,6 @@ rgb(22, 22, 22)
   opacity: 1;
   transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.live-search {
+  display: none;
+}
