added display none to theme.css.liquid also

--- a/assets/theme.css.liquid
+++ b/assets/theme.css.liquid
@@ -21376,3 +21376,6 @@ body:not(.user-is-tabbing) .rte .tabs .grouped-content-trigger {
   opacity: 1;
   transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.live-search {
+  display: none;
+}
