--- a/sections/static-utility-bar.liquid
+++ b/sections/static-utility-bar.liquid
@@ -60,7 +60,7 @@
           {% endif %}
           </div>
 
-          {% assign social_networks = 'facebook|twitter|pinterest|instagram|tumblr|vimeo|youtube|email|rss' %}
+          {% assign social_networks = 'facebook|twitter|pinterest|instagram|tumblr|tiktok|vimeo|youtube|email|rss' %}
           {% assign social_networks = social_networks | split: '|' %}
           {% assign has_social_icons = false %}
 
