--- a/snippets/social-icon.liquid
+++ b/snippets/social-icon.liquid
@@ -88,6 +88,20 @@
     </svg>
   {%- endif -%}
 
+  {%- if id == 'tiktok' -%}
+    <svg
+      aria-hidden="true"
+      focusable="false"
+      role="presentation"
+      xmlns="http://www.w3.org/2000/svg"
+      width="28"
+      height="28"
+      viewBox="0 0 28 28"
+    >
+      <path fill="currentColor" fill-rule="evenodd" d="M15.863 21.98h-.095c-3.391 0-4.38-2.56-4.38-4.077v-4.74H9.503L9.5 10.806c0-.047.05-.061.098-.061 1.742-.664 2.873-1.517 3.156-3.603C12.707 7 12.8 7 12.8 7h2.355v3.318h2.832v2.845h-2.832v4.306c0 .995.377 1.524 1.319 1.524.377 0 .8-.094 1.225-.237.047 0 .094 0 .094.048l.707 2.086v.19c-.519.52-1.602.9-2.638.9z"/>
+    </svg>
+  {%- endif -%}
+
   {%- if id == 'twitter' -%}
     <svg
       aria-hidden="true"
