--- a/sections/static-password.liquid
+++ b/sections/static-password.liquid
@@ -77,7 +77,7 @@
       </div>
     {% endif %}
 
-    {% assign social_networks = 'facebook|twitter|pinterest|instagram|tumblr|vimeo|youtube|email|rss' %}
+    {% assign social_networks = 'facebook|twitter|pinterest|instagram|tumblr|tiktok|vimeo|youtube|email|rss' %}
     {% assign social_networks = social_networks | split: '|' %}
 
     {% assign has_social_icons = false %}
