--- a/snippets/social-list.liquid
+++ b/snippets/social-list.liquid
@@ -1,4 +1,4 @@
-{% assign social_networks = 'facebook|twitter|pinterest|instagram|tumblr|vimeo|youtube|linkedin|email|rss' %}
+{% assign social_networks = 'facebook|twitter|pinterest|instagram|tumblr|tiktok|vimeo|youtube|linkedin|email|rss' %}
 {% assign social_networks = social_networks | split: '|' %}
 
 {% assign has_social_icons = false %}
@@ -64,6 +64,15 @@
         id: 'tumblr',
         title: 'Tumblr'
         url: settings.social_tumblr
+      %}
+    {%- endif -%}
+
+    {%- if settings.social_tiktok != blank -%}
+      {%
+        render 'social-link',
+        id: 'tiktok',
+        title: 'TikTok'
+        url: settings.social_tiktok
       %}
     {%- endif -%}
 
