--- a/snippets/social-icon.liquid
+++ b/snippets/social-icon.liquid
@@ -98,7 +98,7 @@
       height="28"
       viewBox="0 0 28 28"
     >
-      <path fill="currentColor" d="M168 0h-40v168c0 22.092-17.908 40-40 40s-40-17.908-40-40 17.908-40 40-40c3.99 0 7.837.586 11.48 1.668V104.2c-3.772-.523-7.627-.8-11.48-.8-44.183 0-80 35.817-80 80s35.817 80 80 80 80-35.817 80-80V86.18c13.33 9.19 29.53 13.82 46.02 13.82V60c-24.565 0-44.52-19.955-44.52-44.52V0z"/>
+      <path fill="currentColor" fill-rule="evenodd" d="M18.5 3H15v11.5a4 4 0 1 1-4-4v-3.01a7 7 0 1 0 7 7V9.1a7.01 7.01 0 0 0 3.5.94V6.5a3.5 3.5 0 0 1-3.5-3.5z"/>
     </svg>
   {%- endif -%}
 
